--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-
+<! DOCTYPE html>
+<html>
+  <body>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <h1>nba2k.github.io</h1>
+  </body>
+</html>
